syntax = "proto3";

import "zitadel/object.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

package zitadel.idp.v1;
option go_package = "github.com/caos/zitadel/pkg/grpc/saml";

message SAMLConfig {
  string client_id = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "client id generated by the identity provider";
    }
  ];
  string entity_id = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"https://saml.google.com\"";
      description: "the entityID of the SAML provider";
    }
  ];
  string valid_until = 3;
  string cache_duration = 4;
  SAMLOrganisation org = 5;
  repeated SAMLContactPerson person = 6;
  bool want_authn_requests_signed = 7;
  SAMLNameIDFormat nameid_format = 8;
  repeated SAMLKey keys = 9;
  string error_url = 10;
}

message SAMLKey {
  SAMLKeyUse use = 1;

}
enum SAMLKeyUse {
  SAMLKEY_USE_NONE = 0;
  SAMLKEY_USE_SIGNING = 1;
  SAMLKEY_USE_ENCRYPTION = 2;
}

enum SAMLNameIDFormat {
  NAMEID_FORMAT_UNSPECIFIED = 0;
  NAMEID_FORMAT_EMAILADDRESS = 1;
  NAMEID_FORMAT_X509_SUBJECT_NAME = 2;
  NAMEID_FORMAT_WINDOWS_DOMAIN_QUALIFIED_NAME = 3;
  NAMEID_FORMAT_KERBEROS = 4;
  NAMEID_FORMAT_ENTITY = 5;
  NAMEID_FORMAT_PERSISTENT = 6;
  NAMEID_FORMAT_TRANSIENT = 7;
}

message SAMLOrganisation {
  string name = 1;
  string display_name = 2;
  string url = 3;
}

enum SAMLContactType {
  CONTACT_TYPE_OTHER = 0;
  CONTACT_TYPE_TECHNICAL = 1;
  CONTACT_TYPE_SUPPORT = 2;
  CONTACT_TYPE_ADMINISTRATIVE = 3;
  CONTACT_TYPE_BILLING = 4;
}

message SAMLContactPerson {
  SAMLContactType type = 1;
  string company = 2;
  string given_name = 3;
  string sur_name = 4;
  string email_address = 5;
  string telephone_number = 6;
}
